codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11571
expression: term.backend().vt100().screen().contents()
---



⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha)


› Ask Codex to do anything

  ? for shortcuts                                                                                    100% context left
