codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__replayed_thread_rollback_turn_context_diff_info_messages.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• Permissions updated to Smart Approvals

• Model changed to gpt-5.4 high for Plan mode.

• Personality set to Pragmatic

• Directory changed to /tmp/current
